User rating fixed

--- a/views/viewRecipe.handlebars
+++ b/views/viewRecipe.handlebars
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
     <link rel="stylesheet" href="/css/{{style}}.css" />
+    {{!-- <script type="text/javascript" src = "rating.js"></script> --}}
     <title>DELICIOUSLY</title>
 </head>
 
@@ -27,7 +28,15 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+
+                    <a class="nav-link  btn btn-outline-light" href="/add">
+                        <i class="fas fa-plus"></i> Add Recipe</a>
+
+                </li>
+                <li class="nav-item active">
+
+                    <a class="nav-link" href="#">Home<span class="sr-only"></span></a>
+
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">My Collection</a>
@@ -35,53 +44,70 @@
                 <li class="nav-item">
                     <a class="nav-link" href="#">Recipes</a>
                 </li>
+
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Logout</a>
+                    <a class="nav-link" href="#">
+                        {{!-- <img src="/assets/person.jpeg" alt="" class="img-thumbnail"> --}}Logout
+
+                    </a>
                 </li>
             </ul>
         </div>
     </nav>
-    <section class="container mt-4">
-        <div class=" row my-1">
-            <!-- Top -->
-            {{#each recipes}}
-            <div class=" bg-danger p-2">
-                <img src="" alt="" />
-                <h1 class="large text-light">{{this.title}}</h1>
-                <p class="lead text-light">{{this.title}}</p>
-                <p class="lead text-light">Author</p>
-            </div>
-            <!-- About -->
-            <div class=" bg-light p-2 my-3">
-                <h2 class="text-danger">Name</h2>
-                <p>
-                    {{this.description}}
-                </p>
-                <div class="line"></div>
-                <h2 class="text-danger">Info</h2>
-                <div class="skills">
-                    <div class="p-1"><i class="fas fa-check"></i>{{this.serving}}</div>
-                    <div class="p-1"><i class="fas fa-check"></i>{{this.totalTime}}</div>
-                    <div class="p-1">
-                        <i class="fas fa-check"></i>{{this.cookingTime}}
-                    </div>
-                    <div class="p-1"><i class="fas fa-check"></i>{{this.prepTime}}</div>
-                    <div class="p-1"><i class="fas fa-check"></i>{{this.difficultyLevel}}</div>
-                    <div class="p-1"><i class="fas fa-check"></i>{{this.cuisine}}</div>
+    <section class="container-fluid mt-4">
+        <div class=" row my-1 ">
+            <div class="col-md-12">
+                {{#each recipe}}
+                <div class=" bg-danger p-2 text-center">
+                    <img src="/assets/latest8.jpg" alt="" id="recipe-image" class="mt-2" />
+                    <img src="/assets/latest11.jpg" alt="" id="recipe-image" class="mt-2" />
+
+                    <h1 class="
+                        large text-light">{{this.title}}</h1>
+                    <p class="lead text-light">{{this.title}}</p>
+                    <p class="lead text-light">Author</p>
                 </div>
             </div>
         </div>
+        <!-- About -->
+        <div class=" bg-light p-2 my-3">
+            <h2 class="text-danger">Name</h2>
+            <p>
+                {{this.description}}
+            </p>
+            <div class="line"></div>
+            <h2 class="text-danger">Info</h2>
+            <div class="skills">
+                <div class="p-1"><i class="fas fa-check"></i>Serving:{{this.serving}}</div>
+                <div class="p-1"><i class="fas fa-check"></i>Total Time Taken{{this.totalTime}}</div>
+                <div class="p-1">
+                    <i class="fas fa-check"></i> Cooking Time{{this.cookingTime}}
+                </div>
+                <div class="p-1"><i class="fas fa-check"></i>Prep Time{{this.prepTime}}</div>
+                <div class="p-1"><i class="fas fa-check"></i>Diggiculty Level:{{this.difficultyLevel}}</div>
+                <div class="p-1"><i class="fas fa-check"></i>Cuisine:{{this.cuisine}}</div>
+            </div>
+        </div>
+
+
+
+
         <!-- Ingredients -->
         <div class="row bg-white p-2">
             <div class="col-4">
                 <h2 class="text-danger ">Ingredients</h2>
                 <div>
                     <ul class="">
-                        <li><input type="checkbox" name="" id="" /> Wheat</li>
-                        <li><input type="checkbox" name="" id="" /> Oil</li>
-                        <li><input type="checkbox" name="" id="" /> Tomatoes</li>
-                        <li><input type="checkbox" name="" id="" /> Salt</li>
-                        <li><input type="checkbox" name="" id="" /> Cheese</li>
+                        {{#each this.ingredients.item}}
+                        <li><input type="checkbox" name="" id="" />{{this}}</li>
+                        {{/each}}
+                    </ul>
+                </div>
+                <div>
+                    <ul class="">
+                        {{#each this.ingredients.quantity}}
+                        <li>{{this}}</li>
+                        {{/each}}
                     </ul>
                 </div>
             </div>
@@ -91,8 +117,7 @@
                     <h2 class="text-danger ">Instructions</h2>
                     <div>
                         <h3 class="">
-                            Instruction Lorem ipsum dolor sit, amet consectetur adipisicing
-                            elit. Beatae, quod.
+                            {{this.instructionsteps}}
                         </h3>
 
                         <p>
@@ -106,6 +131,8 @@
                 </div>
             </div>
         </div>
+        <div class="text-center"> <a href="" class="btn btn-danger m-3 ">Add to Collection</a></div>
+
         {{/each}}
         <!-- REVIEW -->
 
@@ -113,24 +140,25 @@
             <h2 class="text-danger">
                 REVIEWS
             </h2>
-
             <div class="col-md-12">
-                <form class="pt-5 my-5 mx-5 bg-light p-4"  method="POST" action="/recipe">
+                <form class="" action="/recipe" method="POST">
+                <div class="stars">
+                <input type="radio" name="star" class="star-1" id="star-1" value="1"/>
+                <label class="star-1" for="star-1" name="rating">1</label>
+                <input type="radio" name="star" class="star-2" id="star-2" value="2" />
+                <label class="star-2" for="star-2" name="rating">2</label>
+                <input type="radio" name="star" class="star-3" id="star-3" value="3"/>
+                <label class="star-3" for="star-3" name="rating">3</label>
+                <input type="radio" name="star" class="star-4" id="star-4" value="4"/>
+                <label class="star-4" for="star-4" name="rating">4</label>
+                <input type="radio" name="star" class="star-5" id="star-5" value="5"/>
+                <label class="star-5" for="star-5" name="rating">5</label>
+                <span></span>
+            </div>
                     <div class="form-group">
-                        <div class="stars">
-                            <label for="exampleInputEmail1">Rating</label>
-                            <input type="radio" name="star" class="star-1" id="star-1" />
-                            <label class="star-1" for="star-1">1</label>
-                            <input type="radio" name="star" class="star-2" id="star-2" />
-                            <label class="star-2" for="star-2">2</label>
-                            <input type="radio" name="star" class="star-3" id="star-3" />
-                            <label class="star-3" for="star-3">3</label>
-                            <input type="radio" name="star" class="star-4" id="star-4" />
-                            <label class="star-4" for="star-4">4</label>
-                            <input type="radio" name="star" class="star-5" id="star-5" />
-                            <label class="star-5" for="star-5">5</label>
-                            <span></span>
-                        </div>
+                        <label for="exampleInputEmail1">Title</label>
+                        <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
+                            placeholder="" name="title" />
                     </div>
                     <div class="form-group">
                         <label for="exampleInputPassword1">Review</label>
@@ -138,42 +166,57 @@
                             placeholder="" name="review"></textarea>
                     </div>
 
-                    <input type="submit" class="btn btn-danger btn-block" value="submit">
-                    
-                 
+                    <input type="submit" class="btn btn-danger btn-block" value="add review">
+
                 </form>
             </div>
         </div>
-    
+        {{#each rating}}
+
         <div class="row my-3 bg-white">
-           
+
             <div class="col-md-12">
-                 {{#each data}}
-                <div class="">
-                    <div>  
+
+                <div class="stars">
+                    <div>
                         <h4 class="my-1">
-                            <a href="" class="text-danger">
-                                {{this.recipeId}}</a>
+                            <a href="" class="text-danger">{{this.title}}</a>
                         </h4>
-                        
                         <p>
-                            
-                        </p>{{this.review}}
+                            {{this.review}}
+                        </p>
                     </div>
                     <div>
                         <ul>
-                            <li class="badge badge-dark">Rating</li>{{this.rating}}
+                            <li class="badge badge-dark">Rating:</li>{{this.rating}}
                         </ul>
                     </div>
                 </div>
-                 {{/each}}
             </div>
-           
         </div>
-
-      
+        {{/each}}
+        {{!-- <div class="row bg-white">
+            <div class="col-md-12">
+                <div>
+                    <div>
+                        <h4 class="my-1">
+                            <a href="" class="text-danger ">Review Two</a>
+                        </h4>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi
+                            similique
+                        </p>
+                    </div>
+                    <div>
+                        <ul>
+                            <li class="badge badge-dark">Rating</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div> --}}
     </section>
-    <script> type="text/javascript" src="rating.js"</script>
+    
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         crossorigin="anonymous"></script>
@@ -183,5 +226,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
+    <script type="type/javascript" src="/rating.js"></script>
 </body>
+
 </html>
