collection button implemented

--- a/views/myCollection.handlebars
+++ b/views/myCollection.handlebars
@@ -69,7 +69,7 @@
         </ul>
       </div>
     </nav>
-    <section class="page-top-section  card">
+    {{!-- <section class="page-top-section  card">
       <img src="./assets/page-top-bg.jpg" alt="" />
       <div class="container">
         <h2 class="card-img-overlay">
@@ -110,6 +110,9 @@
 
         {{/each}}
       </div>
-    </section>
+    </section> --}}
+
+
+    <div><h1></h1></div>
   </body>
 </html>
