--- a/views/viewRecipe.handlebars
+++ b/views/viewRecipe.handlebars
@@ -191,7 +191,7 @@
                     <div>
                         <ul>
                             <li class="badge badge-dark" id="rating{{@index}}">{{this.rating}}</li>
-                            <p id="output{{@index}}"></p>
+                            <p id="rating{{@index}}"></p>
                         </ul>
                     </div>
                 </div>
