--- a/views/viewRecipe.handlebars
+++ b/views/viewRecipe.handlebars
@@ -5,12 +5,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
-        crossorigin="anonymous" />
+    
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+        integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous" />
     <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet" />
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
-        crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
     <link rel="stylesheet" href="/css/{{style}}.css" />
+    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+    {{!-- <script type="text/javascript" src = "rating.js"></script> --}}
     <title>DELICIOUSLY</title>
 </head>
 
@@ -26,26 +29,26 @@
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ml-auto">
-                <li class="nav-item ">
+                <li class="nav-item active">
 
-                    <a class="nav-link  btn btn-outline-light" href="/add" id="addBtn">
+                    <a class="nav-link  btn btn-outline-light" href="/add">
                         <i class="fas fa-plus"></i> Add Recipe</a>
 
                 </li>
-                <li class="nav-item ">
+                <li class="nav-item active">
 
-                    <a class="nav-link" href="/home">Home<span class="sr-only"></span></a>
+                    <a class="nav-link" href="#">Home<span class="sr-only"></span></a>
 
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">My Collection</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/recipes">Recipes</a>
+                    <a class="nav-link" href="#">Recipes</a>
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link" href="/">
+                    <a class="nav-link" href="#">
                         {{!-- <img src="/assets/person.jpeg" alt="" class="img-thumbnail"> --}}Logout
 
                     </a>
@@ -56,20 +59,17 @@
     <section class="container-fluid mt-4">
         <div class=" row my-1 ">
             <div class="col-md-12">
-                
                 {{#each recipe}}
                 <div class=" bg-danger p-2 text-center">
-                   
                     <img src="/assets/latest8.jpg" alt="" id="recipe-image" class="mt-2" />
                     <img src="/assets/latest11.jpg" alt="" id="recipe-image" class="mt-2" />
 
                     <h1 class="
                         large text-light">{{this.title}}</h1>
                     <p class="lead text-light">{{this.title}}</p>
-                   <a href="/myCollection" class="btn btn-primary text-center">Add to my collection</a>
+                    <p class="lead text-light">Author</p>
                 </div>
             </div>
-           
         </div>
         <!-- About -->
         <div class=" bg-light p-2 my-3">
@@ -142,9 +142,21 @@
             <h2 class="text-danger">
                 REVIEWS
             </h2>
-
             <div class="col-md-12">
                 <form class="" action="/recipe" method="POST">
+                <div class="stars">
+                <input type="radio" name="star" class="star-1" id="star-1" value="1"/>
+                <label class="star-1" for="star-1" name="rating">1</label>
+                <input type="radio" name="star" class="star-2" id="star-2" value="2" />
+                <label class="star-2" for="star-2" name="rating">2</label>
+                <input type="radio" name="star" class="star-3" id="star-3" value="3"/>
+                <label class="star-3" for="star-3" name="rating">3</label>
+                <input type="radio" name="star" class="star-4" id="star-4" value="4"/>
+                <label class="star-4" for="star-4" name="rating">4</label>
+                <input type="radio" name="star" class="star-5" id="star-5" value="5"/>
+                <label class="star-5" for="star-5" name="rating">5</label>
+                <span></span>
+            </div>
                     <div class="form-group">
                         <label for="exampleInputEmail1">Title</label>
                         <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
@@ -152,20 +164,22 @@
                     </div>
                     <div class="form-group">
                         <label for="exampleInputPassword1">Review</label>
-                        <textarea type="textarea" class="form-control" rows="5" id="exampleInputPassword1" placeholder=""
-                            name="review"></textarea>
+                        <textarea type="textarea" class="form-control" rows="5" id="exampleInputPassword1"
+                            placeholder="" name="review"></textarea>
                     </div>
 
-                    <input type="submit" class="btn btn-danger btn-block" value="Add review">
+                    <input type="submit" class="btn btn-danger btn-block" value="add review">
 
                 </form>
             </div>
         </div>
         {{#each rating}}
+
         <div class="row my-3 bg-white">
 
             <div class="col-md-12">
-                <div class="">
+
+                <div class="stars">
                     <div>
                         <h4 class="my-1">
                             <a href="" class="text-danger">{{this.title}}</a>
@@ -176,10 +190,11 @@
                     </div>
                     <div>
                         <ul>
-                            <li class="badge badge-dark">Rating</li>
+                            <li class="badge badge-dark" id="rating{{@index}}">{{this.rating}}</li>
+                            <p id="output{{@index}}"></p>
                         </ul>
                     </div>
-                </div>
+                </div>   
             </div>
         </div>
         {{/each}}
@@ -204,12 +219,17 @@
             </div>
         </div> --}}
     </section>
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+    
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
         crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
+    <script type="type/javascript" src="rating.js"></script>
 </body>
 
 </html>
