--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -10,8 +10,8 @@
     <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
         crossorigin="anonymous">
-    <link rel="stylesheet" href="/css/{{style}}.css" />
-    <title>Welcome to the login</title>
+      <link rel="stylesheet" href="/css/{{ style }}.css" /> 
+<title>Welcome to the login</title>
 </head>
 
 <body>
@@ -19,19 +19,20 @@
         <div class="parent dark-overlay">
             <div class="card">
                 <h5 class="card-title text-center m-3">LOGIN</h5>
-                <form class="" name="myform">
+                <form class="" name="myform" action="/login" method="POST">
                     <div class="card-body ">
 
                         <label>Username</label>
                         <div class="form-group ">
-                            <input type="text" class="form-control form-control-lg" id="password" />
+                            <input type="text" class="form-control form-control-lg" id="password" name="username"/>
                         </div>
                         <label>Password</label>
                         <div class="form-group ">
-                            <input type="password" class="form-control form-control-lg" id="password" />
+                            <input type="password" class="form-control form-control-lg" id="password" name="password"/>
                         </div>
                         <div class="form-group text-center">
-                            <a href="/home" class="btn btn-lg btn-danger m-3" id="myBtn">Login</a>
+                            <input type="submit" class="btn btn-lg btn-danger m-3" id="myBtn" value="submit">
+                            </input>
                             <br>
                             Dont have an account yet? <a href="/signup" class="mt-5">SignUp</a> here.
                             <a href="/reset" class="mt-5">Reset Password</a>
