--- a/public/css/home.css
+++ b/public/css/home.css
@@ -21,12 +21,6 @@
   margin: 1.5rem 0;
 }
 
-.bg-white {
-  background-color: white;
-  color: #333;
-  border: #ccc 1px solid;
-}
-
 .dark-overlay {
   height: 100%;
   width: 100%;
@@ -36,50 +30,23 @@
   background-color: rgba(0, 0, 0, 0.8);
 }
 
-.table th,
-.table td {
-  padding: 1rem;
-  text-align: left;
+/* .card {
+  height: 498px;
+  min-width: 328px;
+} */
+#description {
+  max-height: 80px;
+  overflow: scroll;
 }
-
-.table th {
-  background: #f4f4f4;
-}
-
-.form-group {
-  margin: 1.2rem 0;
-}
-
-.form-text {
-  display: block;
-  margin-top: 0.3rem;
-  color: #888;
-}
-
-.form input[type="text"],
-.form input[type="email"],
-.form input[type="password"],
-.form input[type="date"],
-.form select,
-.form textarea {
-  display: block;
-  width: 100%;
-  padding: 0.4rem;
-  font-size: 1.2rem;
-  border: 1px solid #ccc;
-}
-
-.form input[type="submit"] {
-  font: inherit;
-}
-
 * {
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
   margin: 0;
   padding: 0;
 }
-
+a {
+  color: black;
+}
 body {
   font-family: "Raleway", sans-serif;
   font-size: 1rem;
