--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -58,7 +58,7 @@
           </li>
 
           <li class="nav-item">
-            <a class="nav-link" href="/">
+            <a class="nav-link" href="/login/logout">
               {{!--
               <img src="/assets/person.jpeg" alt="" class="img-thumbnail" />
               --}}Logout
@@ -67,73 +67,45 @@
         </ul>
       </div>
     </nav>
-    <div
-      id="carouselExampleControls"
-      class="carousel slide"
-      data-ride="carousel"
-    >
-      <div class="carousel-inner">
-        <div class="carousel-item active">
+   
+      <div class="">
+        <div class="">
           <img
             src="/assets/brooke-lark-275181-unsplash.jpg"
             class="d-block w-100"
             alt="..."
           />
         </div>
-        <div class="carousel-item">
-          <img
-            src="/images/brooke-lark-275181-unsplash.jpg"
-            class="d-block w-100"
-            alt="..."
-          />
-        </div>
-        <div class="carousel-item">
-          <img src="..." class="d-block w-100" alt="..." />
-        </div>
+     
+    
       </div>
-      <a
-        class="carousel-control-prev"
-        href="#carouselExampleControls"
-        role="button"
-        data-slide="prev"
-      >
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-      </a>
-      <a
-        class="carousel-control-next"
-        href="#carouselExampleControls"
-        role="button"
-        data-slide="next"
-      >
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-      </a>
-    </div>
     <section class="container-fluid">
-      <div class="row myx-4">
+      <div class="row my-4">
         <div class="col-12 mt-4">
           <h1 class="large text-danger my-2">Latest Recipes</h1>
         </div>
       </div>
-      <div class="row">
+      
+      <div class="row"> 
         {{#each recipes}}
-        <div class="col-md-3">
-          <div class="card text-left mb-5" id="card-deck">
+       <div class="col-md-3">
+          <div class="card text-left mb-4" id="card-deck">
             <img
               class="card-img-top round-image"
-              src="/assets/latest7.jpg"
-              alt=""
+              src="{{this.image}}"
+              alt="" width="400"
             />
             <div class="card-body">
               <h4 class="card-title">{{ this.title }}</h4>
               <p class="card-text"></p>
               <div>
-                <p>{{ this.description }}</p>
-
+                <p id="description">{{ this.description }}</p>
+ <div class="card-footer">
+    
                 <a href="/recipe/{{ this._id }}" class="btn btn-danger"
                   >View Recipe</a
                 >
+    </div>
               </div>
             </div>
           </div>
