--- a/public/css/viewRecipe.css
+++ b/public/css/viewRecipe.css
@@ -21,63 +21,15 @@
   margin: 1.5rem 0;
 }
 
-.bg-white {
-  background-color: white;
-  color: #333;
-  border: #ccc 1px solid;
-}
-
-.dark-overlay {
-  height: 100%;
-  width: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
-  background-color: rgba(0, 0, 0, 0.8);
-}
-
-.table th,
-.table td {
-  padding: 1rem;
-  text-align: left;
-}
-
-.table th {
-  background: #f4f4f4;
-}
-
-.form-group {
-  margin: 1.2rem 0;
-}
-
-.form-text {
-  display: block;
-  margin-top: 0.3rem;
-  color: #888;
-}
-
-.form input[type="text"],
-.form input[type="email"],
-.form input[type="password"],
-.form input[type="date"],
-.form select,
-.form textarea {
-  display: block;
-  width: 100%;
-  padding: 0.4rem;
-  font-size: 1.2rem;
-  border: 1px solid #ccc;
-}
-
-.form input[type="submit"] {
-  font: inherit;
-}
-
 * {
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+}
+.img-background {
+  background-color: black;
+  border: 2px inset lightgray;
 }
 
 body {
