--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -26,7 +26,7 @@
   </head>
 
   <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-danger">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-danger ">
       <a class="navbar-brand" href="#">Deliciously</a>
       <button
         class="navbar-toggler"
@@ -41,23 +41,23 @@
       </button>
 
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item ">
-            <a class="nav-link  btn btn-outline-light" href="/add" id="addBtn">
+        <ul class="navbar-nav ml-auto ">
+          <li class="nav-item hvr-underline-from-left">
+            <a class="nav-link btn btn-outline-light" href="/add" id="addBtn">
               <i class="fas fa-plus"></i> Add Recipe</a
             >
           </li>
-          <li class="nav-item active">
-            <a class="nav-link" href="#">Home<span class="sr-only"></span></a>
+          <li class="nav-item active hvr-underline-from-left">
+            <a class="nav-link " href="#">Home<span class="sr-only"></span></a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item hvr-underline-from-left">
             <a class="nav-link" href="#">My Collection</a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item hvr-underline-from-left">
             <a class="nav-link" href="/recipes">Recipes</a>
           </li>
 
-          <li class="nav-item">
+          <li class="nav-item hvr-underline-from-left">
             <a class="nav-link" href="/login/logout">
               {{!--
               <img src="/assets/person.jpeg" alt="" class="img-thumbnail" />
@@ -68,17 +68,16 @@
       </div>
     </nav>
    
-      <div class="">
         <div class="">
           <img
-            src="/assets/brooke-lark-275181-unsplash.jpg"
-            class="d-block w-100"
+            src="/assets/heroNew3.png"
+            class="d-block w-100 "
             alt="..."
           />
+         
         </div>
-     
-    
-      </div>
+ 
+ 
     <section class="container-fluid">
       <div class="row my-4">
         <div class="col-12 mt-4">
@@ -86,33 +85,32 @@
         </div>
       </div>
       
-      <div class="row"> 
+      <div class="card-deck"> 
         {{#each recipes}}
-       <div class="col-md-3">
+       {{!-- <div class="col-md-3 col-sm-6"> --}}
           <div class="card text-left mb-4" id="card-deck">
             <img
               class="card-img-top round-image"
               src="{{this.image}}"
-              alt="" width="400"
+              alt=""
             />
-            <div class="card-body">
+            <div class="card-body text-center">
               <h4 class="card-title">{{ this.title }}</h4>
-              <p class="card-text"></p>
-              <div>
-                <p id="description">{{ this.description }}</p>
- <div class="card-footer">
-    
-                <a href="/recipe/{{ this._id }}" class="btn btn-danger"
-                  >View Recipe</a
-                >
-    </div>
-              </div>
+              <p class="card-text"  id="description"> {{ this.description }}</p>
+             
+ 
             </div>
+            <p class="text-center"> <a href="/recipe/{{ this._id }}" class="btn btn-danger mb-2 hvr-curl-top-left"
+                  >View Recipe</a
+                ></p>
           </div>
-        </div>
+        {{!-- </div> --}}
 
         {{/each}}
       </div>
     </section>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
   </body>
 </html>
