--- a/views/viewRecipe.handlebars
+++ b/views/viewRecipe.handlebars
@@ -54,25 +54,31 @@
 </nav>
 <section class="container-fluid mt-4">
     <div class=" row my-1 ">
-        <div class="col-md-12">
+   
+          {{#each recipe}}
+
+        <div class="container-fluid">
             
-            {{#each recipe}}
-            <div class=" bg-danger p-2 text-center">
+           <div class="img-background  p-2 text-center">
+                  <p class="large m-2 text-light">{{this.title}}</p>
                 
-                <img src="{{this.image}}" alt="" id="recipe-image" class="mt-2" />
-             <h1 class="
-                    large text-light">{{this.title}}</h1>
-                <p class="lead text-light">{{this.title}}</p>
-        <form action="/collection" method="POST">
+                <img src="{{this.image}}" alt="" id="recipe-image" class="mt-2" style="border:10px double white;" />
+           
+                      <form action="/collection" method="POST">
                 <input type="hidden" name="title" value="{{this.title}}">
                 <input type="hidden" name="image" value="{{this.image}}">
              
                 <input type="hidden" name="recipeId" value="{{this._id}}">
-                <button class="btn btn-primary text-center">Add to my collection</button>
+                <button class="btn btn-danger text-center m-3">Add to my collection</button>
                 </form>
+  
             </div>
         </div>
+      
+        
         </div>
+        
+     
     <!-- About -->
     <div class=" bg-light p-2 my-3">
         <h2 class="text-danger">Name</h2>
@@ -93,7 +99,8 @@
         </div>
     </div>
     <!-- Ingredients -->
-    <div class="row bg-white p-2">
+    <div class=" bg-light p-2 my-3">
+    <div class="row ">
         <div class="col-4">
             <h2 class="text-danger ">Ingredients</h2>
             <div>
@@ -116,9 +123,9 @@
             <div class="  p-2">
                 <h2 class="text-danger ">Instructions</h2>
                 <div>
-                    <h3 class="">
+                    <p class="">
                         {{this.instructionsteps}}
-                    </h3>
+                    </p>
 
                     <p>
                         Description:Lorem ipsum, dolor sit amet consectetur adipisicing
@@ -131,15 +138,15 @@
             </div>
         </div>
     </div>
-    <div class="text-center"> <a href="" class="btn btn-danger m-3 ">Add to Collection</a></div>
+ </div>
 
     {{/each}}
     <!-- REVIEW -->
-    <div class="row my-3 ">
-        <h2 class="text-danger">
-            REVIEWS
-        </h2>
+    <div class=" bg-light p-2 my-3">
+        <div class="row">
+       
         <div class="col-md-12">
+               <h2 class="text-danger ">Reviews</h2>
             <form class="" action="/recipe" method="POST">
                 <div class="form-group">
                     <label for="exampleInputEmail1">Title</label>
@@ -156,9 +163,10 @@
 
             </form>
         </div>
-    </div>
+  </div>  
+  </div>
     {{#each rating}}
-    <div class="row my-3 bg-white">
+    <div class="row my-3 bg-light">
         <div class="col-md-12">
             <div class="">
                 <div>
