--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,119 +1,98 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link
-      rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
-      integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
-      crossorigin="anonymous"
-    />
-    <link
-      href="https://fonts.googleapis.com/css?family=Raleway"
-      rel="stylesheet"
-    />
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
-      crossorigin="anonymous"
-    />
-    <link rel="stylesheet" href="/css/{{ style }}.css" />
 
-    <title>Welcome to the register</title>
-  </head>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
+    crossorigin="anonymous" />
+  <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet" />
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+    crossorigin="anonymous" />
+  <link rel="stylesheet" href="/css/{{ style }}.css" />
 
-  <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-danger ">
-      <a class="navbar-brand" href="#">Deliciously</a>
-      <button
-        class="navbar-toggler"
-        type="button"
-        data-toggle="collapse"
-        data-target="#navbarSupportedContent"
-        aria-controls="navbarSupportedContent"
-        aria-expanded="false"
-        aria-label="Toggle navigation"
-      >
-        <span class="navbar-toggler-icon"></span>
-      </button>
+  <title>Welcome to the register</title>
+</head>
 
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav ml-auto ">
-          <li class="nav-item hvr-underline-from-left">
-            <a class="nav-link btn btn-outline-light" href="/add" id="addBtn">
-              <i class="fas fa-plus"></i> Add Recipe</a
-            >
-          </li>
-          <li class="nav-item active hvr-underline-from-left">
-            <a class="nav-link " href="#">Home<span class="sr-only"></span></a>
-          </li>
-          <li class="nav-item hvr-underline-from-left">
-            <a class="nav-link" href="#">My Collection</a>
-          </li>
-          <li class="nav-item hvr-underline-from-left">
-            <a class="nav-link" href="/recipes">Recipes</a>
-          </li>
+<body>
+  <nav class="navbar navbar-expand-lg navbar-dark bg-danger ">
+    <a class="navbar-brand" href="#">Deliciously</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
 
-          <li class="nav-item hvr-underline-from-left">
-            <a class="nav-link" href="/login/logout">
-              {{!--
-              <img src="/assets/person.jpeg" alt="" class="img-thumbnail" />
-              --}}Logout
-            </a>
-          </li>
-        </ul>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav ml-auto ">
+        <li class="nav-item hvr-underline-from-left">
+          <a class="nav-link btn btn-outline-light" href="/add" id="addBtn">
+            <i class="fas fa-plus"></i> Add Recipe</a>
+        </li>
+        <li class="nav-item active hvr-underline-from-left">
+          <a class="nav-link " href="#">Home<span class="sr-only"></span></a>
+        </li>
+        <li class="nav-item hvr-underline-from-left">
+          <a class="nav-link" href="#">My Collection</a>
+        </li>
+        <li class="nav-item hvr-underline-from-left">
+          <a class="nav-link" href="/recipes">Recipes</a>
+        </li>
+
+        <li class="nav-item hvr-underline-from-left">
+          <a class="nav-link" href="/login/logout">
+            {{!--
+            <img src="/assets/person.jpeg" alt="" class="img-thumbnail" />
+            --}}Logout
+          </a>
+        </li>
+      </ul>
+    </div>
+  </nav>
+  <div class="">
+    <img src="/assets/heroNew9.png" class="d-block w-100 " />
+
+  </div>
+
+
+  <section class="container-fluid">
+    <div class="row my-4">
+      <div class="col-12 mt-4">
+        <h1 class="large text-danger my-2">Latest Recipes</h1>
       </div>
-    </nav>
-   
-        <div class="">
-          <img
-            src="/assets/heroNew3.png"
-            class="d-block w-100 "
-            alt="..."
-          />
-         
-        </div>
- 
- 
-    <section class="container-fluid">
-      <div class="row my-4">
-        <div class="col-12 mt-4">
-          <h1 class="large text-danger my-2">Latest Recipes</h1>
-        </div>
-      </div>
-      
-      <div class="row"> 
-        {{#each recipes}}
-       <div class="col-md-3 col-sm-6">
-          <div class="card text-left mb-4" id="card-deck">
-            <img
-              class="card-img-top round-image"
-              src="{{this.image}}"
-              alt=""
-             
-            />
-          
-            <div class="card-body text-center">
-              <h4 class="card-title">{{ this.title }}</h4>
-              <p class="card-text"  id="description"> {{ this.description }}</p>
-             
+    </div>
 
-            </div>
-                <p class="text-center" id="viewButton"> <a href="/recipe/{{ this._id }}" class="btn btn-danger mb-2 hvr-curl-top-left"
-                  >View Recipe</a
-                ></p>
+    <div class="row">
+      {{#each recipes}}
+      <div class="col-md-3 col-sm-6">
+        <div class="card text-left mb-4" id="card-deck">
+          <img class="card-img-top round-image" src="{{this.image}}" alt="" />
+
+          <div class="card-body text-center">
+            <h4 class="card-title">{{ this.title }}</h4>
+            <p class="card-text" id="description"> {{ this.description }}</p>
+
+
           </div>
-          
+          <p class="text-center" id="viewButton"> <a href="/recipe/{{ this._id }}" class="btn btn-danger mb-2 hvr-curl-top-left">View
+              Recipe</a></p>
         </div>
 
-        {{/each}}
       </div>
-    </section>
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-  </body>
+
+      {{/each}}
+    </div>
+  </section>
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+    crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+    crossorigin="anonymous"></script>
+</body>
+
 </html>
+
+
+
+
