--- a/views/myCollection.handlebars
+++ b/views/myCollection.handlebars
@@ -26,7 +26,7 @@
   </head>
 
   <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-danger">
+     <nav class="navbar navbar-expand-lg navbar-dark bg-danger">
       <a class="navbar-brand" href="#">Deliciously</a>
       <button
         class="navbar-toggler"
@@ -61,37 +61,33 @@
 
           <li class="nav-item">
             <a class="nav-link" href="/">
-              {{!--
+              {{!--mongodb://127.0.0.1:27017mongodb://127.0.0.1:27017
               <img src="/assets/person.jpeg" alt="" class="img-thumbnail" />
               --}}Logout
             </a>
           </li>
         </ul>
       </div>
-    </nav>
-    <section class="page-top-section  card">
+    </nav> 
+     <section class="page-top-section  card">
       <img src="./assets/page-top-bg.jpg" alt="" />
       <div class="container">
         <h2 class="card-img-overlay">
-          All Recipes
+          Collection
         </h2>
       </div>
-    </section>
-    <section class="container-fluid">
-      <div class="row myx-4">
-        <div class="col-12 mt-4">
-          {{!--
-          <h1 class="large text-danger my-2">Recipes</h1>
-          --}}
-        </div>
-      </div>
-      <div class="row">
-        {{#each recipes}}
+    </section> 
+    <div>
+  
+
+
+  <div class="row">
+        {{#each collection}}
         <div class="col-md-3">
           <div class="card text-left mb-5" id="card-deck">
             <img
               class="card-img-top round-image"
-              src="/assets/latest7.jpg"
+              src="{{this.image}}"
               alt=""
             />
             <div class="card-body">
@@ -100,7 +96,11 @@
               <div>
                 <p>{{ this.description }}</p>
 
-                <a href="/recipe/{{ this._id }}" class="btn btn-danger"
+                <a href="/collection" class="btn btn-danger"
+                  >Delete</a>
+                
+                
+                <a href="/recipe/{{ this.recId}}" class="btn btn-danger"
                   >View Recipe</a
                 >
               </div>
@@ -109,7 +109,8 @@
         </div>
 
         {{/each}}
-      </div>
-    </section>
+      </div> 
+
+    </div>
   </body>
 </html>
